--- a/Kubernetes个人笔记/基本概念与组件.md
+++ b/Kubernetes个人笔记/基本概念与组件.md
@@ -48,7 +48,8 @@ Kubernetes 多组件之间的通信原理：
 * apiserver 也会直接调用 kubelet API（如 logs, exec, attach 等），默认不校验 kubelet 证书，但可以通过 `--kubelet-certificate-authority` 开启（而 GKE 通过 SSH 隧道保护它们之间的通信）
 
 比如最典型的创建 Pod 的流程：
-​​![k8s pod](./images/k8s-pod-process.png)
+
+![k8s-pod-process](/assets/k8s-pod-process.png)
 
 * 用户通过 REST API 创建一个 Pod
 * apiserver 将其写入 etcd
