--- a/Kubernetes个人笔记/深入理解pod/健康检查.md
+++ b/Kubernetes个人笔记/深入理解pod/健康检查.md
@@ -44,13 +44,13 @@ spec:
 
 另外我们在容器启动的时候，执行了如下命令：
 ```shell
-☁  ~ /bin/sh -c "touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600"
+  ~ /bin/sh -c "touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600"
 ```
 意思是说在容器最开始的30秒内有一个`/tmp/healthy`文件，在这30秒内执行`cat /tmp/healthy`命令都会返回一个成功的返回码。30秒后，我们删除这个文件，现在执行`cat /tmp/healthy`是不是就会失败了，这个时候就会重启容器了。
 
 我们来创建下该`Pod`，在30秒内，查看`Pod`的`Event`：
 ```shell
-☁  ~ kubectl describe pod liveness-exec
+ ~ kubectl describe pod liveness-exec
 ```
 我们可以观察到容器是正常启动的，在隔一会儿，比如40s后，再查看下`Pod`的`Event`，在最下面有一条信息显示 `liveness probe`失败了，容器被删掉并重新创建。
 
