--- a/Kubernetes个人笔记/深入理解pod/健康检查.md
+++ b/Kubernetes个人笔记/深入理解pod/健康检查.md
@@ -1,5 +1,5 @@
 
-## 21. 健康检查
+## 健康检查
 
 上节课我们和大家一起学习了`Pod`中容器的生命周期的两个钩子函数，`PostStart`与`PreStop`，其中`PostStart`是在容器创建后立即执行的，而`PreStop`这个钩子函数则是在容器终止之前执行的。除了上面这两个钩子函数以外，还有一项配置会影响到容器的生命周期的，那就是健康检查的探针。
 
