--- a/Kubernetes个人笔记/深入理解pod/初始化容器.md
+++ b/Kubernetes个人笔记/深入理解pod/初始化容器.md
@@ -5,7 +5,7 @@
 `Init Container`就是用来做初始化工作的容器，可以是一个或者多个，如果有多个的话，这些容器会按定义的顺序依次执行，只有所有的`Init Container`执行完后，主容器才会被启动。我们知道一个`Pod`里面的所有容器是共享数据卷和网络命名空间的，所以`Init Container`里面产生的数据可以被主容器使用到的。
 
 是不是感觉`Init Container`和之前的钩子函数有点类似啊，只是是在容器执行前来做一些工作，是吧？从直观的角度看上去的话，初始化容器的确有点像`PreStart`，但是钩子函数和我们的`Init Container`是处在不同的阶段的，我们可以通过下面的图来了解下：
-![loap](./images/loap.jpg)
+![loap](/assets/loap.jpg)
 
 从上面这张图我们可以直观的看到`PostStart`和`PreStop`包括`liveness`和`readiness`是属于主容器的生命周期范围内的，而`Init Container`是独立于主容器之外的，当然他们都属于`Pod`的生命周期范畴之内的，现在我们应该明白`Init Container`和钩子函数之类的区别了吧。
 
