--- a/Kubernetes个人笔记/Kubernetes基础/基本概念与组件.md
+++ b/Kubernetes个人笔记/Kubernetes基础/基本概念与组件.md
@@ -21,7 +21,7 @@ Kubernetes 中的绝大部分概念都抽象成 Kubernetes 管理的一种资源
 ​​
 
 Kubernetes 主要由以下几个核心组件组成:
-* etcd 保存了整个集群的状态，就是一个数据库；
+* etcd 保存了整个集群的状态，就是一个数据库，负责保存 Kubernetes Cluster 的配置信息和各种资源的状态信息。当数据发生变化时，etcd 会快速地通知 Kubernetes 相关组件
 * apiserver 提供了资源操作的唯一入口，并提供认证、授权、访问控制、API 注册和发现等机制；
 * controller manager 负责维护集群的状态，比如故障检测、自动扩展、滚动更新等；
 * scheduler 负责资源的调度，按照预定的调度策略将 Pod 调度到相应的机器上；
