--- a/Kubernetes个人笔记/Kubernetes基础/基本概念与组件.md
+++ b/Kubernetes个人笔记/Kubernetes基础/基本概念与组件.md
@@ -24,7 +24,7 @@ Kubernetes 主要由以下几个核心组件组成:
 * etcd 保存了整个集群的状态，就是一个数据库，负责保存 Kubernetes Cluster 的配置信息和各种资源的状态信息。当数据发生变化时，etcd 会快速地通知 Kubernetes 相关组件
 * apiserver 提供了资源操作的唯一入口，并提供认证、授权、访问控制、API 注册和发现等机制；
 * controller manager 负责维护集群的状态，比如故障检测、自动扩展、滚动更新等；
-* scheduler 负责资源的调度，按照预定的调度策略将 Pod 调度到相应的机器上；
+* scheduler Scheduler 负责决定将 Pod 放在哪个 Node 上运行。Scheduler 在调度时会充分考虑 Cluster 的拓扑结构，当前各个节点的负载，以及应用对高可用、性能、数据亲和性的需求。；
 * kubelet 负责维护容器的生命周期，同时也负责 Volume（CSI）和网络（CNI）的管理；
 * Container runtime 负责镜像管理以及 Pod 和容器的真正运行（CRI）；
 * kube-proxy 负责为 Service 提供 cluster 内部的服务发现和负载均衡；
