--- a/Kubernetes个人笔记/Kubernetes基础/基本概念与组件.md
+++ b/Kubernetes个人笔记/Kubernetes基础/基本概念与组件.md
@@ -25,7 +25,7 @@ Kubernetes 主要由以下几个核心组件组成:
 * apiserver 提供了资源操作的唯一入口，并提供认证、授权、访问控制、API 注册和发现等机制；
 * controller manager 负责维护集群的状态，比如故障检测、自动扩展、滚动更新等；
 * scheduler Scheduler 负责决定将 Pod 放在哪个 Node 上运行。Scheduler 在调度时会充分考虑 Cluster 的拓扑结构，当前各个节点的负载，以及应用对高可用、性能、数据亲和性的需求。；
-* kubelet 负责维护容器的生命周期，同时也负责 Volume（CSI）和网络（CNI）的管理；
+* kubelet 是 Node 的 agent，当 Scheduler 确定在某个 Node 上运行 Pod 后，会将 Pod 的具体配置信息（image、volume 等）发送给该节点的 kubelet，kubelet 根据这些信息创建和运行容器，并向 Master 报告运行状态；
 * Container runtime 负责镜像管理以及 Pod 和容器的真正运行（CRI）；
 * kube-proxy 负责为 Service 提供 cluster 内部的服务发现和负载均衡；
 
