--- a/Kubernetes个人笔记/Kubernetes基础/基本概念与组件.md
+++ b/Kubernetes个人笔记/Kubernetes基础/基本概念与组件.md
@@ -27,7 +27,7 @@ Kubernetes 主要由以下几个核心组件组成:
 * scheduler Scheduler 负责决定将 Pod 放在哪个 Node 上运行。Scheduler 在调度时会充分考虑 Cluster 的拓扑结构，当前各个节点的负载，以及应用对高可用、性能、数据亲和性的需求。；
 * kubelet 是 Node 的 agent，当 Scheduler 确定在某个 Node 上运行 Pod 后，会将 Pod 的具体配置信息（image、volume 等）发送给该节点的 kubelet，kubelet 根据这些信息创建和运行容器，并向 Master 报告运行状态；
 * Container runtime 负责镜像管理以及 Pod 和容器的真正运行（CRI）；
-* kube-proxy service 在逻辑上代表了后端的多个 Pod，外界通过 service 访问 Pod。service 接收到的请求是如何转发到 Pod 的呢？这就是 kube-proxy 要完成的工作。每个 Node 都会运行 kube-proxy 服务，它负责将访问 service 的 TCP/UPD 数据流转发到后端的容器。如果有多个副本，kube-proxy 会实现负载均衡。；
+* kube-proxy service 在逻辑上代表了后端的多个 Pod，外界通过 service 访问 Pod。service 接收到的请求是如何转发到 Pod 的呢？这就是 kube-proxy 要完成的工作。每个 Node 都会运行 kube-proxy 服务，它负责将访问 service 的 TCP/UDP 数据流转发到后端的容器。如果有多个副本，kube-proxy 会实现负载均衡。；
 
 当然了除了上面的这些核心组件，还有一些推荐的插件：
 * kube-dns 负责为整个集群提供 DNS 服务
